# ToolBox

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc  test.cpp
cmake/: FindAstra.cmake
config/: calib.yaml  calib_bak1.yaml  calib_bk2.yaml  cfg.yaml
datas/templates/晶体/: train.yaml
datas/templates/齿轮/: train.yaml
datas/十字刀/: train.yaml
datas/圆点/: train.yaml
datas/垫片/: train.yaml
datas/电容/: train.yaml
src/: ArcFace.cpp  ArcFace.h  AstraCamera.cpp  AstraCamera.h  AstraCamera.hpp  DES.cpp  DES.h  admin_system.cpp  admin_system.h  admin_system.ui  base_camera.h  calib.cpp  calib.h  calib.ui  camera.cpp  camera.h  encoder.cpp  encoder.h  encoder.ui  face_detect.cpp  face_detect.h  face_detect.ui  imagewidget.cpp  imagewidget.h  line2Dup.cpp  line2Dup.h  local_camera.cpp  local_camera.h  main_window.cpp  main_window.h  main_window.ui  myencoder.cpp  myencoder.h  newImageWidget.cpp  newImageWidget.h  pcl_visual.cpp  pcl_visual.h  pcl_visual.ui  start_window.cpp  start_window.h  (+14 more)
test/: test.cpp  testAstraCam.cpp  test_camera_calib.cpp  test_capture_images.cpp  test_pcl.cpp
test/case0/: circle_templ.yaml
test/case2/: test_templ.yaml
